Bug 30129 - Weborder: Gift Card price is cut off if price contains more than 4 symbols

--- a/skins/weborder/css/products.css
+++ b/skins/weborder/css/products.css
@@ -271,7 +271,7 @@
 #modifiers_popup .product .cost .input_beauty {
     margin-right: 20px;
     margin-left: 3px;
-    width:75px;
+    width: 97px;
 }
 #modifiers_popup .product .gift_card {
     margin-top:5px;
